add api handler tests
